--- a/.github/workflows/St2_Build-iStoreOS-ib.yml
+++ b/.github/workflows/St2_Build-iStoreOS-ib.yml
@@ -6,10 +6,9 @@ on:
       openwrt_board:
         description: "请选择设备型号（默认当下主流设备）"
         required: true
-        default: "a311d-oes_s905d_wxy-oect_station-m2_tvi3315a_jp-tvbox_s922x-oes-plus_fine3399"
+        default: "s905x3-h96max"
         type: choice
         options:
-          - a311d-oes_s905d_wxy-oect_station-m2_tvi3315a_jp-tvbox_s922x-oes-plus_fine3399
           - a311d
           - a311d-oes
           - alark35-3500
